--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-pdf/renderer": "^3.1.12",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.35.7",
     "@trpc/client": "^10.38.5",
@@ -31,6 +32,8 @@
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.3.1",
+    "react-pdf": "^7.5.0",
+    "react-resize-detector": "^9.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.0",
