--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.21",
-    "@pinecone-database/pinecone": "^1.1.0",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -19,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-pdf/renderer": "^3.1.12",
+    "@supabase/supabase-js": "^2.38.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.35.7",
     "@trpc/client": "^10.38.5",
