--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "langchain": "^0.0.164",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "next-nprogress-bar": "^2.3.4",
     "openai": "^4.12.1",
     "pdf-parse": "^1.1.1",
     "react": "latest",
