--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-nprogress-bar": "^2.3.4",
+    "next-themes": "^0.2.1",
     "openai": "^4.12.1",
     "pdf-parse": "^1.1.1",
     "react": "latest",
