--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.0.8",
     "langchain": "^0.0.164",
     "lucide-react": "^0.279.0",
     "next": "latest",
