--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/next": "^10.38.5",
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
+    "@types/react-window": "^1.8.8",
     "@uploadthing/react": "^5.6.2",
     "ai": "^2.2.15",
     "class-variance-authority": "^0.7.0",
@@ -51,6 +52,7 @@
     "react-pdf": "^7.5.0",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
+    "react-window": "^1.8.10",
     "simplebar-react": "^3.2.4",
     "stripe": "^14.5.0",
     "tailwind-merge": "^1.14.0",
